--- a/Projet/angular.json
+++ b/Projet/angular.json
@@ -21,6 +21,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "scr/_redirects",
               {
                 "glob": "**/*",
                 "input": "public"
